# projet

projet/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  evenement  projet.glade.bak  projet.gladep.bak  utilisateur.txt
projet/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
projet/po/: Makefile  Makefile.in
projet/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  datatemp.txt  date.c  date.h  dateD.txt  evenement.c  evenement.h  evenement.txt  fiche.c  fiche.h  fichemedical.txt  fichemedicalk.txt  interface.c  interface.c.bak  interface.h.bak  main.c  profile.c  profile.h  profiles.c  profiles.h  profiles.txt  projet  rendezvous.c  rendezvousA.c  rendezvousA.h  users.txt  verfier.c
